--- a/sass/layout/_about.sass
+++ b/sass/layout/_about.sass
@@ -18,6 +18,7 @@
     height: 80vw
     top: 0
     left: 130%
+    z-index: -1
 
 .about__img
     display: none
@@ -29,6 +30,7 @@
     
     .about__wrapper
         align-items: flex-start
+        max-width: 50%
         
     .about__text
         text-align: left
@@ -38,7 +40,6 @@
     .about__img
         display: block
         max-width: 50%
-        z-index: 1
 
     .about__square
         left: 100%
